--- a/src/ComponentsArea.css
+++ b/src/ComponentsArea.css
@@ -6,6 +6,7 @@
   float: right;
   margin: 5px;
   margin-top: 2.5%;
+  margin-right: 15px;
   display: block;
   -webkit-box-shadow: 7px 7px 24px -4px rgba(0, 0, 0, 0.69);
   -moz-box-shadow: 7px 7px 24px -4px rgba(0, 0, 0, 0.69);
@@ -21,7 +22,7 @@
 #title {
   font-family: 'Roboto', sans-serif;
   display: block;
-  margin-left: 35%;
+  text-align: center;
 }
 
 #componentView {
